# aw-web

./: .gitignore  README.md  disclaimer.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/aw_cli/providers/: animeunity.py
src/aw_cli/web/: __init__.py  app.py  components.py  db.py  server.py  services.py  state.py  utils.py  views.py
src/aw_web/: anime.py  utilities.py
src/aw_web/providers/: __init__.py  animeunity.py  animeworld.py  provider.py
src/aw_web/services/: anilist.py  collections.py  playback.py  providers.py
src/aw_web/web/: __init__.py  app.py  components.py  db.py  server.py  services.py  state.py  styles.py  utils.py  views.py
tests/: conftest.py
tests/core/: test_anime.py
tests/providers/: test_animeunity.py  test_animeworld.py  test_provider.py
tests/web/: test_db.py  test_progress.py  test_seasonal.py  test_security.py  test_watchlist_cards.py
