[project]
name = "aw-web"
dynamic = ["version"]
description = "Interfaccia web locale per guardare anime con aw-cli"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pip-system-certs>=5.2",
    "pydantic>=2.12.5",
    "regex>=2025.9.18",
    "rich>=13.9.4",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://github.com/luigiaceto/aw-cli"
Repository = "https://github.com/luigiaceto/aw-cli"

[project.scripts]
aw-web = "aw_cli.web.app:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aw_cli"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
