[project]
name = "aw-web"
dynamic = ["version"]
description = "Interfaccia web locale per guardare anime"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "pip-system-certs>=5.2",
]

[project.urls]
Homepage = "https://github.com/luigiaceto/aw-web"
Repository = "https://github.com/luigiaceto/aw-web"

[project.scripts]
aw-web = "aw_web.web.app:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aw_web"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
